--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,8 +8,10 @@
 </head>
 
 <body>
-  <h1>Ahhh</h1>
-  <p>this is a test</p>
+  <form action="/tasks" method="post">
+    <input type="text" name="test">
+    <button>Add Data</button>
+  </form>
 </body>
 
 </html>
