submit strings to server from input

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,8 @@
 
 <body>
   <form action="/tasks" method="post">
-    <input type="text" name="test">
+    <input type="text" name="content">
+    <input type="text" name="author">
     <button>Add Data</button>
   </form>
 </body>
