renames tasks to quotes

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,10 +8,15 @@
 </head>
 
 <body>
-  <form action="/tasks" method="post">
+  <form action="/quotes" method="post">
     <input type="text" name="content">
     <input type="text" name="author">
     <button>Add Data</button>
+  </form>
+  <form action="/quotes/:quoteid" method="put">
+    <input type="text" name="content">
+    <input type="text" name="author">
+    <button>Update Data</button>
   </form>
 </body>
 
