successfully create quotes database

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <form action="/tasks" method="post">
+  <form action="/quotes" method="post">
     <input type="text" name="content">
     <input type="text" name="author">
     <button>Update Data</button>
