display all db data after form submission

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,6 +12,7 @@
     <input type="text" name="content">
     <input type="text" name="author">
     <button>Update Data</button>
+  </form>
 </body>
 
 </html>
